--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="navbar-brand">
             <!-- Placeholder for your logo -->
             <!-- Replace this with your actual logo URL, e.g., "https://yourcompany.com/logo.png" -->
-            <img src="https://placehold.co/40x40/4f46e5/ffffff?text=LOGO" alt="Company Logo" class="navbar-logo">
+            <img src="/download.png" class="navbar-logo">
             <div class="navbar-title">Distributor Panel</div>
         </div>
         <div class="navbar-buttons">
