--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <div class="container-fluid px-4 py-2">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <!-- Placeholder for your logo -->
-                <img src="download.png" alt="Company Logo" class="navbar-brand-img me-2">
+                <img src="../dc/download.png" alt="Company Logo" class="navbar-brand-img me-2">
                 <span class="navbar-title" data-i18n="distributorPanelTitle">Distributor Panel</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
