--- a/bootpro.html
+++ b/bootpro.html
@@ -293,7 +293,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary w-100 shadow-lg" style="--bs-bg-opacity: 1; background-color: #3f51b5 !important;">
         <div class="container-fluid px-4 py-2">
             <a class="navbar-brand d-flex align-items-center fw-bold fs-5" href="#">
-                <img src="https://placehold.co/48x48/3f51b5/ffffff?text=LOGO" alt="Your Logo" height="48" class="d-inline-block align-top me-2">
+                <img src="../dc/download.png" alt="Your Logo" height="48" class="d-inline-block align-top me-2">
                 <span class="fw-bold fs-5" data-i18n="navbarTitle">BKDS Milk Collection Data</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
