--- a/bootpro.html
+++ b/bootpro.html
@@ -294,7 +294,7 @@
         <div class="container-fluid px-4 py-2">
             <a class="navbar-brand d-flex align-items-center fw-bold fs-5" href="#">
                 <img src="../dc/logo.jpg" alt="Your Logo" height="48" class="d-inline-block align-top me-2">
-                <span class="fw-bold fs-5" data-i18n="navbarTitle">BKDS Milk Collection Data</span>
+                <span class="fw-bold fs-5" data-i18n="navbarTitle">Bundelkhand Dugdh Sangh Maryadit,Sagar (M.P.) </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
