--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 <body class="antialiased">
     <nav class="navbar">
         <div class="navbar-brand">
-            <img src="/bkds/download.png" alt="Company Logo" class="navbar-logo">
+            <img src="../dc/download.png" alt="Company Logo" class="navbar-logo">
             <div id="navbarTitle" class="navbar-title">Distributor Panel</div>
         </div>
         <div class="navbar-buttons">
